--- a/Masterarbeit.tex
+++ b/Masterarbeit.tex
@@ -15,6 +15,7 @@
 \usepackage[english]{babel}
  
 \usepackage{amsthm}
+\usepackage{amssymb}
  
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[section]
