--- a/src/bib/Literatur.bib
+++ b/src/bib/Literatur.bib
@@ -169,3 +169,25 @@ month={June},}
   pages={684--689},
   year={2008}
 }
+
+@INPROCEEDINGS{Bell_4028391, 
+author={Q. x. Wu and D. Bell and J. w. Guan and R. Khokhar and X. Huang and S. c. Zhong}, 
+booktitle={2006 International Conference on Machine Learning and Cybernetics}, 
+title={A Decision Assistant Based on Evidential Reasoning}, 
+year={2006}, 
+pages={1991-1995}, 
+keywords={case-based reasoning;decision making;human computer interaction;uncertainty handling;artificial intelligence;decision assistant system;easy-to-use interface;evidence theory;evidential reasoning mechanism;incremental evidence combination algorithm;uncertainty reasoning;Application software;Artificial intelligence;Bayesian methods;Computer science;Cybernetics;Decision making;Educational institutions;Humans;Keyboards;Machine learning;Physics;Uncertainty;Decision Assistant;decision making;evidential reasoning;uncertainty reasoning}, 
+doi={10.1109/ICMLC.2006.259130}, 
+ISSN={2160-133X}, 
+month={Aug},}
+
+@article{srivastava2011introduction,
+  title={An introduction to evidential reasoning for decision making under uncertainty: Bayesian and belief function perspectives},
+  author={Srivastava, Rajendra P},
+  journal={International Journal of Accounting Information Systems},
+  volume={12},
+  number={2},
+  pages={126--135},
+  year={2011},
+  publisher={Elsevier}
+}
