--- a/Masterarbeit.tex
+++ b/Masterarbeit.tex
@@ -11,6 +11,7 @@
 \usepackage{pdfpages}
 \usepackage[strict]{changepage}
 \usepackage{subcaption}
+\usepackage{enumitem}
 
 \usepackage[english]{babel}
  
