--- a/src/tex/intro.tex
+++ b/src/tex/intro.tex
@@ -146,10 +146,10 @@ To start a KF, user has to give an estimation $lll$ and an estimate of its covar
   \item Update error covariance matrix.
   $$kkk$$
   where, $I$ is the identity matrix.
-\end{enumerate}\\
+\end{enumerate}
 
 After performing these 5 steps the iteration restarts again from step 1, but with $k:=k+1$.\\
-So, we can say that The equations containig in the steps of above algorithm can be divided into two groups: time update equations (equation 1 and 2) and measurement update equations(equation 3-5)[3]. Also the final estimation algorithm looks like  a predictor-corrector algorithm as shown in Figure [cycle].
+So, we can say that The equations containing in the steps of above algorithm can be divided into two groups: time update equations (equation 1 and 2) and measurement update equations(equation 3-5)[3]. Also the final estimation algorithm looks like  a predictor-corrector algorithm as shown in Figure [cycle].
 
 \subsubsection{Underlying Dynamic System Model}
 KF is based on linear and non-linear dynamical systems discretized in the time domain[3]. As shown in Figure [underlying], each state represents a real vector and a sequence of noisy observations are the inputs of internal states. The system is modeled according to the state space representation of the KF specifying the matrices i.e., the state transition model ($A$), the observation model ($H$), the covariance of the process noise ($Q$), the covariance of the measurement noise ($R$), and sometimes the control-input model ($B$) for each time-step $k$.\\
